# short-id

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: SECURITY_SETUP.md
examples/: basic.rs  macros.rs  newtype.rs
scripts/: release.sh
src/: lib.rs
tests/: integration.rs
