[package]
name = "short-id"
version = "0.1.0"
edition = "2021"
description = "Tiny crate for generating short, URL-safe, random or time-ordered IDs."
license = "MIT"
repository = "https://github.com/lioriz/short-id"
homepage = "https://github.com/lioriz/short-id"
documentation = "https://docs.rs/short-id"
readme = "README.md"
keywords = ["id", "short-id", "url-safe", "identifier"]
categories = ["data-structures", "no-std"]
exclude = [
    ".github/",
    "scripts/",
    "RELEASE.md",
    "CONTRIBUTING.md",
]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["rand/std"]
